/**
 * @fileoverview Basic streaming example for Contract Invocation Consumer
 */

import { ContractInvocationClient } from '../client';
import { ContractInvocationEvent } from '../../gen/contract_invocation/contract_invocation_event_pb';
import { InvocationType } from '../types';

async function basicStreamingExample() {
  console.log('üöÄ Starting Basic Contract Invocation Streaming Example\n');

  // Initialize client with basic configuration
  const client = new ContractInvocationClient({
    endpoint: 'localhost:50051',
    debug: true,
    timeout: 30000,
    maxRetries: 3,
    retryInterval: 2000
  });

  // Test connection before starting
  console.log('Testing connection...');
  const connected = await client.testConnection();
  if (!connected) {
    console.error('‚ùå Failed to connect to Contract Invocation Processor');
    process.exit(1);
  }
  console.log('‚úÖ Connection successful\n');

  // Subscribe to all contract invocation events
  const subscription = client.subscribe(
    {
      startLedger: Math.floor(Date.now() / 1000) - 3600, // Start from 1 hour ago
      autoReconnect: true,
      response: {
        includeDiagnosticEvents: true,
        includeStateChanges: true,
        includeSubCalls: true,
        includeTtlExtensions: true
      }
    },
    
    // Event handler
    (event: ContractInvocationEvent) => {
      console.log('üì¶ Contract Invocation Event Received:');
      console.log(`  ‚îú‚îÄ Ledger: ${event.getLedgerSequence()}`);
      console.log(`  ‚îú‚îÄ Transaction: ${event.getTransactionHash()}`);
      console.log(`  ‚îú‚îÄ Contract: ${event.getContractId()}`);
      console.log(`  ‚îú‚îÄ Type: ${getInvocationType(event)}`);
      console.log(`  ‚îú‚îÄ Success: ${event.getSuccessful()}`);
      
      // Display contract call details
      const contractCall = event.getContractCall();
      if (contractCall) {
        console.log(`  ‚îú‚îÄ Function: ${contractCall.getFunctionName()}`);
        console.log(`  ‚îú‚îÄ Invoker: ${contractCall.getInvokingAccount()}`);
        console.log(`  ‚îú‚îÄ Arguments: ${contractCall.getArgumentsList().length} args`);
        
        // Show diagnostic events if present
        const diagnosticEvents = contractCall.getDiagnosticEventsList();
        if (diagnosticEvents.length > 0) {
          console.log(`  ‚îú‚îÄ Diagnostic Events: ${diagnosticEvents.length}`);
          diagnosticEvents.forEach((diag, idx) => {
            console.log(`  ‚îÇ  ‚îî‚îÄ Event ${idx + 1}: Contract ${diag.getContractId()}, Topics: ${diag.getTopicsList().length}`);
          });
        }
        
        // Show state changes if present
        const stateChanges = contractCall.getStateChangesList();
        if (stateChanges.length > 0) {
          console.log(`  ‚îú‚îÄ State Changes: ${stateChanges.length}`);
        }
        
        // Show sub-calls if present
        const subCalls = contractCall.getContractCallsList();
        if (subCalls.length > 0) {
          console.log(`  ‚îú‚îÄ Sub-calls: ${subCalls.length}`);
        }
      }
      
      // Display contract creation details
      const createContract = event.getCreateContract();
      if (createContract) {
        console.log(`  ‚îú‚îÄ Created Contract: ${createContract.getNewContractId()}`);
        console.log(`  ‚îú‚îÄ WASM Hash: ${createContract.getWasmHash()}`);
        console.log(`  ‚îú‚îÄ Creator: ${createContract.getCreatingAccount()}`);
      }
      
      // Display WASM upload details
      const uploadWasm = event.getUploadWasm();
      if (uploadWasm) {
        console.log(`  ‚îú‚îÄ WASM Hash: ${uploadWasm.getWasmHash()}`);
        console.log(`  ‚îú‚îÄ Size: ${uploadWasm.getWasmSize()} bytes`);
        console.log(`  ‚îú‚îÄ Uploader: ${uploadWasm.getUploadingAccount()}`);
      }
      
      console.log(`  ‚îî‚îÄ Timestamp: ${new Date(event.getTimestamp() * 1000).toISOString()}\n`);
    },
    
    // Error handler
    (error: Error) => {
      console.error(`‚ùå Stream error: ${error.message}`);
    },
    
    // Status handler
    (status) => {
      if (status.connected) {
        console.log(`‚úÖ Stream connected - Events processed: ${status.eventsProcessed}`);
      } else {
        console.log(`‚ö†Ô∏è  Stream disconnected - Reconnect attempts: ${status.reconnectAttempts}`);
      }
    }
  );

  // Setup metrics reporting
  client.on('metrics', (metrics) => {
    console.log(`üìä Metrics - Total events: ${metrics.totalEvents}, Rate: ${metrics.eventsPerSecond.toFixed(2)} events/sec, Uptime: ${Math.floor(metrics.uptime / 1000)}s`);
  });

  // Setup graceful shutdown
  process.on('SIGINT', () => {
    console.log('\nüõë Shutting down gracefully...');
    
    const finalMetrics = client.getMetrics();
    console.log(`üìà Final metrics:`);
    console.log(`  ‚îú‚îÄ Total events processed: ${finalMetrics.totalEvents}`);
    console.log(`  ‚îú‚îÄ Total uptime: ${Math.floor(finalMetrics.uptime / 1000)} seconds`);
    console.log(`  ‚îî‚îÄ Average rate: ${(finalMetrics.totalEvents / (finalMetrics.uptime / 1000)).toFixed(2)} events/sec`);
    
    subscription.unsubscribe();
    client.close();
    process.exit(0);
  });

  console.log('üéØ Listening for contract invocation events... (Press Ctrl+C to stop)\n');
}

function getInvocationType(event: ContractInvocationEvent): string {
  if (event.getContractCall()) return 'CONTRACT_CALL';
  if (event.getCreateContract()) return 'CREATE_CONTRACT';
  if (event.getUploadWasm()) return 'UPLOAD_WASM';
  return 'UNKNOWN';
}

// Run example if this file is executed directly
if (require.main === module) {
  basicStreamingExample().catch((error) => {
    console.error('‚ùå Example failed:', error);
    process.exit(1);
  });
}